# sim-discrete

./: BROCHURE.md  Cargo.toml  README.md  features.toml  release-plz.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
crates/sim-lib-discrete/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-discrete-algebra/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-discrete-algebra/recipes/: book.toml
crates/sim-lib-discrete-algebra/recipes/01-basics/: chapter.toml
crates/sim-lib-discrete-algebra/recipes/01-basics/semiring-matrix/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-discrete-algebra/src/: boolean.rs  closure.rs  cookbook.rs  counting.rs  error.rs  gf2.rs  lib.rs  matrix.rs  power.rs  real.rs  semiring.rs  sparse.rs  tropical_max.rs  tropical_min.rs  views.rs
crates/sim-lib-discrete-comb/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-discrete-comb/recipes/: book.toml
crates/sim-lib-discrete-comb/recipes/01-basics/: chapter.toml
crates/sim-lib-discrete-comb/recipes/01-basics/finite-enumeration/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-discrete-comb/recipes/01-basics/rankable-values/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-discrete-comb/src/: bit_vector.rs  cards.rs  combination.rs  cookbook.rs  count.rs  error.rs  lib.rs  mixed_radix.rs  partition.rs  permutation.rs  subset.rs  word.rs
crates/sim-lib-discrete-graph/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-discrete-graph/recipes/: book.toml
crates/sim-lib-discrete-graph/recipes/01-basics/: chapter.toml
crates/sim-lib-discrete-graph/recipes/01-basics/tiny-graph/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-discrete-graph/src/: bridge.rs  cards.rs  certificate.rs  connectivity.rs  cookbook.rs  edge.rs  error.rs  graph.rs  intring.rs  lib.rs  mst.rs  path.rs  traversal.rs  unionfind.rs
crates/sim-lib-discrete-rank/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-discrete-rank/recipes/: book.toml
crates/sim-lib-discrete-rank/recipes/01-basics/: chapter.toml
crates/sim-lib-discrete-rank/recipes/01-basics/combination-space/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-discrete-rank/src/: cards.rs  combinatorial.rs  cookbook.rs  descriptor.rs  error.rs  grade.rs  graph_space.rs  lattice.rs  lib.rs  limits.rs  metric.rs  signal_space.rs  tree_metric.rs
crates/sim-lib-discrete-search/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-discrete-search/recipes/: book.toml
crates/sim-lib-discrete-search/recipes/01-basics/: chapter.toml
crates/sim-lib-discrete-search/recipes/01-basics/constrained-word/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-discrete-search/src/: control.rs  cookbook.rs  engine.rs  error.rs  lib.rs  problem.rs  receipt.rs  two_stack.rs  word.rs
crates/sim-lib-discrete-spectral/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-discrete-spectral/recipes/: book.toml
crates/sim-lib-discrete-spectral/recipes/01-basics/: chapter.toml
crates/sim-lib-discrete-spectral/recipes/01-basics/fwht-signal/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-discrete-spectral/src/: convolution.rs  cookbook.rs  error.rs  hadamard_view.rs  lib.rs  signal.rs  signature.rs  subset.rs  transform.rs
crates/sim-lib-discrete/recipes/: book.toml
crates/sim-lib-discrete/recipes/01-basics/: chapter.toml
crates/sim-lib-discrete/recipes/01-basics/binomial-count/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-discrete/recipes/01-basics/matrix-runtime/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-discrete/src/: cards.rs  citizen.rs  citizen_tests.rs  citizen_values.rs  claims.rs  cookbook.rs  forms.rs  forms_extra.rs  lib.rs  runtime.rs
docs/agents/: card-index.json  cards.jsonl
docs/diagrams/src/: README.md
docs/humans/: README.md
xtask/src/: feature_map.rs  main.rs  simdoc.rs
