[package]
name = "sim-lib-discrete-algebra"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Discrete algebra spine."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-discrete"
homepage = "https://github.com/sim-nest/sim-discrete"

[dependencies]
num-bigint = "0.4"
thiserror = "1"

[lints]
workspace = true
