[package]
name = "sim-lib-discrete"
version = "0.1.3"
edition = "2024"
license = "MPL-2.0"
description = "Discrete-math family facade."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-discrete"
homepage = "https://github.com/sim-nest/sim-discrete"

[dependencies]
sim-citizen = { optional = true, version = "0.1.1" }
sim-cookbook = { version = "0.1.0" }
sim-citizen-derive = { optional = true, version = "0.1.0" }
sim-codec = { version = "0.1.4" }
sim-kernel = { version = "0.1.0" }
sim-lib-core = { optional = true, version = "0.1.0" }
sim-lib-discrete-algebra = { version = "0.1.0", optional = true, path = "../sim-lib-discrete-algebra" }
sim-lib-discrete-comb = { version = "0.1.0", optional = true, path = "../sim-lib-discrete-comb" }
sim-lib-discrete-graph = { version = "0.1.0", optional = true, path = "../sim-lib-discrete-graph" }
sim-lib-discrete-rank = { version = "0.1.0", optional = true, path = "../sim-lib-discrete-rank" }
sim-lib-discrete-spectral = { version = "0.1.0", optional = true, path = "../sim-lib-discrete-spectral" }
sim-value = { optional = true, version = "0.1.0" }
thiserror = "2"

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[dev-dependencies]
sim-codec-lisp = { version = "0.1.0" }
sim-kernel = { version = "0.1.0", features = ["test-support"] }
sim-test-support = { version = "0.1.0" }

[features]
algebra = ["dep:sim-lib-discrete-algebra"]
citizen = ["rank", "dep:sim-citizen", "dep:sim-citizen-derive", "dep:sim-value"]
comb = ["dep:sim-lib-discrete-comb"]
default = []
full = ["algebra", "graph", "comb", "spectral"]
graph = ["algebra", "dep:sim-lib-discrete-graph"]
rank = ["algebra", "graph", "comb", "spectral", "dep:sim-lib-discrete-rank"]
runtime = ["full", "dep:sim-lib-core"]
spectral = ["algebra", "dep:sim-lib-discrete-spectral"]

[lints]
workspace = true
